[package]
name = "marmot-front"
version = "0.1.0"
authors = []
edition = "2021"

[[bin]]
name = "marmot-front"
path = "src/main.rs"

[dependencies]

wasm-bindgen = {version="0.2.78", features = ["serde-serialize"]}
wasm-bindgen-futures = {version="0.4.28"}

rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
wasm-logger = "0.2"
jsonwebtoken = "8"

yew = "0.19"
yew-router = "0.16"


web-sys = {version = "0.3", features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]}

serde = "1.0"
serde_json = "1.0"

