[package]
name = "mdla-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdla-lib = { path = "../mdla-lib" }
actix-web = "4"
actix-files = "0.6"
serde = "1"
serde_json = "1"
log = "0.4"
env_logger = "0.9"
rand = "0.8"
chrono = "0.4"